Now with 'Summary' option (-s).